49 - Using the Maven Release Plugin

--- a/pom.xml
+++ b/pom.xml
@@ -43,4 +43,8 @@
         </plugins>
     </build>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/pernekyvirag/sfg-pet-clinic.git</developerConnection>
+    </scm>
+
 </project>
